# Machine-Learning-Interatomic-Potential-UMA-Enables-MD-Simulations-of-MoS2-Doped

./: .gitignore  LICENSE  README.md  pyproject.toml  session.md
.old/00_Structure/: Mo2S4.cif
.old/01_DFT_MLIP_Validation/: DFT_Job_submitter.sh  README.md  step_2_run_qe_single.py  step_4_ML_energy.py
.old/02_MD_heating_cooling/: equilibration_submitter.sh  heating_submitter.sh  script1_opt_nvt.py  script2_npt.py  script3_final_nvt.py
.old/04_Analysis/: README.md  compare_ml_dft.py  density_analysis.py  msd_analysis.py
00_base_files/: README.md
01_DFT_MLIP_Validation/: step_1_structure_maker.py  step_2_run_qe_single.py  step_3_summarize_dft.py  step_4_ML_energy.py
01_DFT_Validation/: README.md
02_MD_heating_cooling/: README.md  script1_opt_nvt.py  script2_npt.py  script3_final_nvt.py  script4_npt_heat.py  script5_npt_hightemp_hold.py  script6_nvt_high_temp_hold.py  script7_npt_cool.py  script8_npt_lowtemp_hold.py  script9_nvt_lowtemp_hold.py
02_MLMD_Validation/: README.md
03_MLMD_Simulation/: README.md
04_Analysis/: Nearest_neighbour_Analysis.ipynb  compare_ml_dft.py  density_analysis.py  msd_analysis.py
src/mos2doped/: __init__.py  analysis.py  cli.py  dft.py  md.py  ml.py  structures.py
src/mos2doped/scripts/: get_stable_elements.py
