[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mos2doped"
version = "0.1.0"
description = "Refactored toolkit for doped MoS2 workflows"
readme = "README.md"
authors = [{name = "Research Automation"}]
requires-python = ">=3.9"
dependencies = [
    "ase>=3.22",
    "numpy>=1.24",
    "pandas>=2.0"
]

[project.optional-dependencies]
ml = ["fairchem>=0.2.0", "torch>=2.0"]

[project.scripts]
mos2doped = "mos2doped.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mos2doped = ["data/*.cif"]
